chore: updated deployment and service files

--- a/deploy/user_deployment.yaml
+++ b/deploy/user_deployment.yaml
@@ -1,21 +1,67 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: user
+  name: backend-user
   labels:
-    app: user
+    app: backend-user
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: user
+      app: backend-user
   template:
     metadata:
       labels:
-        app: user
+        app: backend-user
     spec:
       containers:
-      - name: user-svc
+      - name: backend-user
         image: rdevcd2020/udagram-api-user
+        env:
+        - name: AWS_PROFILE
+          valueFrom:
+            secretKeyRef:
+              name: k8s-env-secret
+              key: AWS_PROFILE
+        - name: AWS_REGION
+          valueFrom:
+            secretKeyRef:
+              name: k8s-env-secret
+              key: AWS_REGION
+        - name: AWS_BUCKET
+          valueFrom:
+            secretKeyRef:
+              name: k8s-env-secret
+              key: AWS_BUCKET
+        - name: POSTGRES_HOST
+          valueFrom:
+            secretKeyRef:
+              name: k8s-env-secret
+              key: POSTGRES_HOST
+        - name: POSTGRES_DATABASE
+          valueFrom:
+            secretKeyRef:
+              name: k8s-env-secret
+              key: POSTGRES_DATABASE
+        - name: POSTGRES_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: k8s-env-secret
+              key: POSTGRES_USERNAME
+        - name: POSTGRES_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: k8s-env-secret
+              key: POSTGRES_PASSWORD
+        - name: JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: k8s-env-secret
+              key: JWT_SECRET
+        - name: URL
+          valueFrom:
+            configMapKeyRef:
+              name: k8s-config-map
+              key: URL
         ports:
         - containerPort: 8080
