--- a/deploy/user_service.yaml
+++ b/deploy/user_service.yaml
@@ -5,6 +5,7 @@ metadata:
     app: user
   name: user-svc
   namespace: default
+  selfLink: /api/v1/namespaces/default/services/user-svc
 spec:
   ports:
   - port: 8080
