--- a/deploy/user_deployment.yaml
+++ b/deploy/user_deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend-user
-        image: rdevcd2020/udagram-api-user
+        image: rdevcd2020/udagram-api-user:v3
         env:
         - name: AWS_PROFILE
           valueFrom:
