--- a/deploy/user_service.yaml
+++ b/deploy/user_service.yaml
@@ -3,9 +3,9 @@ kind: Service
 metadata:
   labels:
     app: user
-  name: user-svc
+  name: backend-user
   namespace: default
-  selfLink: /api/v1/namespaces/default/services/user-svc
+  selfLink: /api/v1/namespaces/default/services/backend-user
 spec:
   ports:
   - port: 8080
