--- a/deploy/user_service.yaml
+++ b/deploy/user_service.yaml
@@ -2,17 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: user
+    app: backend-user
   name: backend-user
   namespace: default
   selfLink: /api/v1/namespaces/default/services/backend-user
 spec:
   ports:
-  - port: 8080
+  - name: http
+    port: 8080
     protocol: TCP
-    targetPort: 8080
+    targetPort: http
   selector:
-    app: user
+    app: backend-user
   sessionAffinity: None
   type: ClusterIP
 status:
