--- a/deploy/user_deployment.yaml
+++ b/deploy/user_deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend-user
-        image: rdevcd2020/udagram-api-user:v5
+        image: rdevcd2020/udagram-api-user:v6
         env:
         - name: AWS_PROFILE
           valueFrom:
@@ -66,3 +66,8 @@ spec:
         ports:
         - name: http
           containerPort: 8080
+          resources:
+            limits:
+              cpu: 500m
+            requests:
+              cpu: 200m
